--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,7 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/*.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    }
-  ],
+  "buildCommand": "echo 'No build needed'",
+  "outputDirectory": ".",
+  "installCommand": "echo 'No install needed'",
   "headers": [
     {
       "source": "/api/(.*)",
@@ -31,15 +21,10 @@
       ]
     }
   ],
-  "env": {
+   "env": {
     "SUPABASE_URL": "@supabase_url",
     "SUPABASE_KEY": "@supabase_key",
     "GROQ_API_KEY": "@groq_api_key",
     "GEMINI_API_KEY": "@gemini_api_key"
-  },
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs18.x"
-    }
   }
 }
