--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   ],
   "author": "Team FluxoNauts",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/UtkiVish/redoing_chatbot.git"
+  },
+  "homepage": "https://github.com/UtkiVish/redoing_chatbot#readme",
   "dependencies": {
     "@vercel/node": "^3.0.0"
   },
