alsmot finished android app

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ node_modules/
 
 #Android unimportant file go here
 android/.gradle/
-/android/.gradle
+./android/.gradle
 android/app/build/
+./android/app/build/
