--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   },
   "homepage": "https://github.com/SAFAL-TIWARI/SATI-ChatBot#readme",
   "dependencies": {
-    "@vercel/node": "^3.0.0"
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/node": "^3.0.0",
+    "@vercel/speed-insights": "^1.2.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0"
   }
