lenis scroll add to about page and hybrid api approach retrieve

--- a/seo-config.json
+++ b/seo-config.json
@@ -87,7 +87,7 @@
         "website": "https://sati-chatbot.vercel.app"
     },
     "analytics": {
-        "google_analytics": "G-XXXXXXXXXX",
+        "google_analytics": "G-3D2G0PC62C",
         "google_adsense": "ca-pub-1178405148130113"
     },
     "structured_data": {
