--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "@vercel/node": "^3.0.0",
-    "@vercel/speed-insights": "^1.2.0"
+    "@vercel/speed-insights": "^1.2.0",
+    "dotenv": "^17.2.1"
   },
   "engines": {
     "node": ">=18.0.0"
