Fix AdSense approval issues: Update Vercel config for ads.txt, enhance privacy policy with AdSense section, add footer with policy links

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,28 @@
           "value": "Content-Type, Authorization"
         }
       ]
+    },
+    {
+      "source": "/ads.txt",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/plain; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        }
+      ]
+    }
+  ],
+  "routes": [
+    {
+      "src": "/ads.txt",
+      "dest": "/ads.txt",
+      "headers": {
+        "Content-Type": "text/plain"
+      }
     }
   ]
 }
