--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "serverless",
     "vercel"
   ],
-  "author": "Team FluxoNauts",
+  "author": "Team NeoCoders",
   "license": "MIT",
   "repository": {
     "type": "git",
